Use virtual threads for IO operations